# llm_topology_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: run_compare32.py  run_dragonfly32.py  run_fat_tree32.py  run_hyperx32.py
results/results-32/: compare32_active_hop_distribution.csv  compare32_summary.csv  dragonfly32_active_hop_distribution.csv  dragonfly32_hop_matrix.csv  fat_tree32_active_hop_distribution.csv  fat_tree32_hop_matrix.csv  fat_tree32_traffic_matrix.csv  hyperx32_active_hop_distribution.csv  hyperx32_hop_matrix.csv
src/llm_topology/metrics/: __init__.py  hops.py  latency.py  link_load.py  routing.py
src/llm_topology/topologies/: __init__.py  common.py  dragonfly_plus.py  fat_tree.py  hyperx.py
src/llm_topology/traffic/: __init__.py  synthetic.py
src/llm_topology/viz/: cdf.py  heatmap.py
tests/: test_compare32.py  test_dragonfly32.py  test_fat_tree32.py  test_latency32.py  test_link_load32.py
