[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-topology"
version = "0.1.0"
description = "Small simulation framework for LLM training datacenter topology comparison."
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]